# neggia

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker_build.sh
.github/workflows/: main.yml
src/: CMakeLists.txt
src/dectris/: CMakeLists.txt
src/dectris/neggia/: CMakeLists.txt
src/dectris/neggia/compression_algorithms/: CMakeLists.txt  bitshuffle.c  bitshuffle.h
src/dectris/neggia/data/: CMakeLists.txt  Decode.cpp  Decode.h  H5BLinkNode.cpp  H5BLinkNode.h  H5BTreeVersion2.cpp  H5BTreeVersion2.h  H5DataLayoutMsg.cpp  H5DataLayoutMsg.h  H5DataspaceMsg.cpp  H5DataspaceMsg.h  H5DatatypeMsg.cpp  H5DatatypeMsg.h  H5ExtensibleArray.cpp  H5ExtensibleArray.h  H5FilterMsg.cpp  H5FilterMsg.h  H5FixedArray.cpp  H5FixedArray.h  H5FractalHeap.cpp  H5FractalHeap.h  H5HeaderMsg.cpp  H5HeaderMsg.h  H5LinkInfoMessage.cpp  H5LinkInfoMessage.h  H5LinkMsg.cpp  H5LinkMsg.h  H5LocalHeap.cpp  H5LocalHeap.h  H5Object.cpp  H5Object.h  H5ObjectHeader.cpp  H5ObjectHeader.h  H5Path.cpp  H5Path.h  H5Superblock.cpp  H5Superblock.h  H5SymbolTableEntry.cpp  H5SymbolTableEntry.h  H5SymbolTableNode.cpp  (+10 more)
src/dectris/neggia/plugin/: CMakeLists.txt  H5Error.h  H5ToXds.cpp  H5ToXds.h
src/dectris/neggia/plugin/playground/: CMakeLists.txt  plugin_test.cpp
src/dectris/neggia/test/: CMakeLists.txt  DatasetsFixture.cpp  DatasetsFixture.h  H5DatasetTestFixture.cpp  H5DatasetTestFixture.h  Lz4Filter.hpp  Test_Dataset.cpp  Test_DifferentH5Ver.cpp  Test_EigerData.cpp  Test_H5DataspaceMsg.cpp  Test_H5FilterMsg.cpp  Test_H5ObjectHeader.cpp  Test_XdsPlugin.cpp  Test_XdsPluginWithData.cpp  bshuf_h5filter.c  bshuf_h5filter.h  describe_dataset.py  describe_dataset_xds.py
src/dectris/neggia/user/: CMakeLists.txt  Dataset.cpp  Dataset.h  H5File.cpp  H5File.h
